--- a/README.Rmd
+++ b/README.Rmd
@@ -16,12 +16,29 @@ knitr::opts_chunk$set(
 
 # SanFranBeachWater
 
-The goal of SanFranBeachWater is to ...
+`SanFranBeachWater` is a little R package that downloads the Beach Water Quality Monitoring Program data that the the San Francisco Public Utilities Commission maintain [here](http://sfwater.org/cfapps/lims/beachmain1.cfm). The data can be downloaded in raw form, or tables for individual beaches can be downloaded. 
 
-## Example
+## Installation
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-## basic example code
+```{r, eval = FALSE}
+devtools::install_github("RobertMyles/SanFranBeachWater")
 ```
+
+## Usage  
+
+Get the data for China Beach:  
+
+```{r}
+library(SanFranBeachWater)
+
+san_fran_china_beach()
+
+```
+
+Or alternatively, just get the status of the beach ("Open" or "Closed"): 
+
+```{r}
+san_fran_windsurfer_circle(status = TRUE)
+```
+
+Sweet `r emo::ji("beach_umbrella")`
